--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "This application calculates the distance between two locations and displays an estimated logistics fee.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "webpack-dev-server --mode development --config webpack.config.js --open --content-base src/",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production --config webpack.prod.config.js",
+    "heroku-postbuild": "npm run-script build"
   },
   "repository": {
     "type": "git",
@@ -36,13 +37,17 @@
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "dotenv": "^6.0.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -56,10 +61,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
-    "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -67,8 +72,12 @@
     "react-materialize": "^2.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
-    "url-loader": "^1.0.1"
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.0.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3"
   }
 }
